Java8 Version.